# pool_cpp

day00/ex00/: Makefile
day00/ex01/: CMakeLists.txt  Makefile
day00/ex02/: Makefile  acc
day01/ex00/: Makefile  pony
day01/ex01/: Makefile  ex01
day01/ex02/: Makefile  zombie
day01/ex03/: Makefile  zombie_horde
day01/ex04/: Makefile  brain
day01/ex05/: CMakeLists.txt  Makefile  human_with_brain
day01/ex06/: Makefile  violence
day01/ex07/: Makefile  replace
day01/ex08/: Makefile  if_not_switch
day01/ex09/: CMakeLists.txt  Makefile  logger
day01/ex10/: Makefile  a.out  c2at  cato9tails
day02/ex00/: canonical
day02/ex01/: Makefile  a.out  aout  canonical
day02/ex02/: Makefile  operator
day02/ex04/: Makefile  eval_expr
day03/: todo
day03/.todo/: tasks
day03/ex00/: CMakeLists.txt  Makefile  frag_trap
day03/ex01/: CMakeLists.txt  Makefile  traps
day03/ex02/: CMakeLists.txt  Makefile  clap_trap
day03/ex02/.deps/: ScavTrap.d  main.d
day03/ex02/incs/: ClapTrap.hpp  ScavTrap.hpp
day03/ex02/srcs/: ClapTrap.cpp  FragTrap.cpp  ScavTrap.cpp  main.cpp
day03/ex03/: CMakeLists.txt  Makefile  multiple_traps
day03/ex03/.deps/: NinjaTrap.d  main.d
day03/ex03/incs/: ClapTrap.hpp  FragTrap.hpp  NinjaTrap.hpp  ScavTrap.hpp
day03/ex03/srcs/: ClapTrap.cpp  FragTrap.cpp  NinjaTrap.cpp  ScavTrap.cpp  main.cpp
day03/ex04/: CMakeLists.txt  Makefile  no_idea
day03/ex04/.deps/: ClapTrap.d  FragTrap.d  SuperTrap.d  main.d
day03/ex04/incs/: ClapTrap.hpp  FragTrap.hpp  NinjaTrap.hpp  ScavTrap.hpp  SuperTrap.hpp
day03/ex04/srcs/: ClapTrap.cpp  FragTrap.cpp  NinjaTrap.cpp  ScavTrap.cpp  SuperTrap.cpp  main.cpp
day04/ex00/: Makefile  polymorphism
day04/ex01/: Makefile  world_on_fire
day04/ex02/: Makefile  purify
day04/ex03/: CMakeLists.txt  Makefile  bocal_fantasy
day04/ex03/.deps/: AMateria.d  Character.d  Cure.d  Ice.d  MateriaSource.d  main.d
day04/ex03/incs/: AMateria.hpp  Character.hpp  Cure.hpp  ICharacter.hpp  IMateriaSource.hpp  Ice.hpp  MateriaSource.hpp
day04/ex03/srcs/: AMateria.cpp  Character.cpp  Cure.cpp  Ice.cpp  MateriaSource.cpp  main.cpp
day04/ex04/: CMakeLists.txt  Makefile
day04/ex04/.deps/: AsteroKreog.d  DeepCoreMiner.Td
day04/ex04/incs/: AsteroKreog.hpp  DeepCoreMiner.hpp  IAsteroid.hpp  IMiningLaser.hpp  KoalaSteroid.hpp  MiningBarge.hpp  StripMiner.hpp
day04/ex04/srcs/: AsteroKreog.cpp  DeepCoreMiner.cpp  KoalaSteroid.cpp  MiningBarge.cpp  StripMiner.cpp  main.cpp
day05/ex00/: CMakeLists.txt  Makefile  bureaucrat
day05/ex01/: CMakeLists.txt  Makefile  bureaucrat_can_sign
day05/ex02/: CMakeLists.txt  Makefile  bureaucrat_can_sign
day05/ex02/.deps/: Bureaucrat.d  ShrubberyCreationForm.d  main.d
day05/ex02/incs/: Bureaucrat.hpp  Form.hpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.hpp
day05/ex02/srcs/: Bureaucrat.cpp  Form.cpp  RobotomyRequestForm.cpp  ShrubberyCreationForm.cpp  main.cpp
day05/ex03/: CMakeLists.txt  Makefile  bureaucrat_can_sign
day05/ex04/: CMakeLists.txt  Makefile  bureaucrat_can_sign
day05/ex05/: CMakeLists.txt  Makefile  bureaucrat_can_sign  lol
day05/ex05/.deps/: CentralBureaucracy.d  Form.d  Intern.d  OfficeBlock.d  RobotomyRequestForm.d  main.d
day05/ex05/incs/: Bureaucrat.hpp  CentralBureaucracy.hpp  Form.hpp  Intern.hpp  OfficeBlock.hpp
day05/ex05/srcs/: Bureaucrat.cpp  CentralBureaucracy.cpp  Form.cpp  Intern.cpp  OfficeBlock.cpp  ShrubberyCreationForm.cpp  main.cpp
day06/ex00/: Makefile  machina  scalar_conversion
day06/ex01/: Makefile  serialization
day06/ex02/: Makefile  abc
day07/ex01/: iter  (+2 more)
day08/ex03/: CMakeLists.txt  Makefile  description_iterator.bf  student.bf
day08/ex03/bf/: baby_test.bf  generator_text.bf
day08/ex03/incs/: Brainfuck.hpp  brainfuck.h
day08/ex03/incs/instructions/: DecrementByte.hpp  DecrementPointer.hpp  IExecute.hpp  IncrementByte.hpp  IncrementPointer.hpp  InputByte.hpp  Loop.hpp  OutputByte.hpp
day08/ex03/srcs/: Brainfuck.cpp  main.cpp
day08/ex03/srcs/instructions/: DecrementByte.cpp  DecrementPointer.cpp  IncrementByte.cpp  IncrementPointer.cpp  InputByte.cpp  Loop.cpp  OutputByte.cpp
(+244 files in other folders)
